# ChangeLog for mail-client/notmuch
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*notmuch-0.8 (19 Oct 2011)

  19 Oct 2011; James Rowe <jnrowe@gmail.com> +notmuch-0.8.ebuild:
  Version bump [475].

  11 Oct 2011; James Rowe <jnrowe@gmail.com> -notmuch-0.7.ebuild,
  notmuch-0.7-r1.ebuild:
  Keyworded x86.

  10 Oct 2011; James Rowe <jnrowe@gmail.com> notmuch-0.7-r1.ebuild:
  Keyworded amd64.

  18 Sep 2011; James Rowe <jnrowe@gmail.com> -notmuch-0.6.1.ebuild,
  -notmuch-0.6.1-r1.ebuild, notmuch-0.7.ebuild:
  Keyworded x86.

  17 Sep 2011; James Rowe <jnrowe@gmail.com> notmuch-0.7.ebuild:
  Keyworded amd64.

  13 Sep 2011; James Rowe <jnrowe@gmail.com> -notmuch-9999.ebuild:
  Moved live ebuild to ::live.

  10 Sep 2011; James Rowe <jnrowe@gmail.com> notmuch-0.6.1-r1.ebuild,
  notmuch-0.7-r1.ebuild, notmuch-9999.ebuild:
  zsh completion no longer USE configurable.

  10 Sep 2011; James Rowe <jnrowe@gmail.com> +notmuch-0.6.1-r1.ebuild,
  +notmuch-0.7.ebuild, notmuch-9999.ebuild:
  Switched to bash-completion-r1 eclass.

  19 Aug 2011; James Rowe <jnrowe@gmail.com>
  -files/notmuch-0.5-optional_emacs.patch, -notmuch-0.6.ebuild,
  notmuch-0.6.1.ebuild:
  Keyworded x86.

  19 Aug 2011; James Rowe <jnrowe@gmail.com> notmuch-0.6.1.ebuild:
  Keyworded amd64.

*notmuch-0.7 (18 Aug 2011)

  18 Aug 2011; James Rowe <jnrowe@gmail.com> +notmuch-0.7.ebuild:
  Version bump [446].

  08 Aug 2011; James Rowe <jnrowe@gmail.com> -notmuch-0.5.ebuild,
  notmuch-0.6.ebuild:
  Keyworded x86.

  08 Aug 2011; James Rowe <jnrowe@gmail.com> notmuch-0.6.ebuild:
  Keyworded amd64.

*notmuch-0.6.1 (20 Jul 2011)

  20 Jul 2011; James Rowe <jnrowe@gmail.com> +notmuch-0.6.1.ebuild:
  Version bump [440].

  20 Jul 2011; James Rowe <jnrowe@gmail.com> notmuch-0.5.ebuild,
  notmuch-0.6.ebuild, notmuch-9999.ebuild:
  Merged 0.6 changes to live ebuild.

  20 Jul 2011; James Rowe <jnrowe@gmail.com> notmuch-0.5.ebuild,
  notmuch-0.6.ebuild, notmuch-9999.ebuild: