@@ -9,4 +9,5 @@
 
   * `0.7-r1 <https://github.com/JNRowe/jnrowe-misc/blob/master/mail-client/notmuch/notmuch-0.7-r1.ebuild>`__  ``amd64``, ``x86``
   * `0.8 <https://github.com/JNRowe/jnrowe-misc/blob/master/mail-client/notmuch/notmuch-0.8.ebuild>`__  ``~amd64`` (due 2011-11-18), ``~x86`` (due 2011-11-18)
+  * `0.9 <https://github.com/JNRowe/jnrowe-misc/blob/master/mail-client/notmuch/notmuch-0.9.ebuild>`__  ``~amd64`` (due 2011-11-21), ``~x86`` (due 2011-11-21)
 
