@@ -3,15 +3,17 @@ Hash: SHA512
 
 DIST notmuch-0.7.tar.gz 389830 RMD160 ae55134588c7435074ce6d73dcb151bee2447845 SHA1 a16bf6dfbce78a62b004ce9f983c1b3a4951c733 SHA256 0548310551b5e0da2eb366e1683e4b81b25b774d5ab4c5117091a67653646ec8
 DIST notmuch-0.8.tar.gz 391638 RMD160 3e21a953517b7d19cb840c2d6db2bf3cfb6ea524 SHA1 cc9e18f6a3a0020a73d3d37be35fb60bb630523d SHA256 f40bcdc6447cae9f76d5b4e70ab70d87e4a813cd123b524c1dc3155a3371a949
+DIST notmuch-0.9.tar.gz 398868 RMD160 b956ceb629943bfa65c1c6fab6b10dc78639588b SHA1 988e93545880e9465380383f00d591d8a23c61dd SHA256 e6f1046941d2894d143cb7c19d4810f97946f98742f6d9b8a7208ddb858c57e4
 EBUILD notmuch-0.7-r1.ebuild 4663 RMD160 ef5ce3f3fd22ede92fc12509cec69e3250105391 SHA1 cc49a6d725adad97a257903db2b84095e6500e6f SHA256 166f35ad58ed0f21eee64d9036fd7e6a9f4a3b7cd4e5d8f9864fd3dc2b06f3dc
 EBUILD notmuch-0.8.ebuild 4663 RMD160 4931aa635d7e4ecba51f45626378b725733e939f SHA1 3aec26ca3740f06275c0370b1461fc4ee73a709c SHA256 1025916f1b6bdbf6a3d9343027c99935ca499c2f7a743918dcb5e0084ae8f822
-MISC ChangeLog 7314 RMD160 828f7d0223c4e2ea86679f04d5f4c554677f52e4 SHA1 e4f7ffb481eecbb194dba04ec60d8b346d6bf625 SHA256 ac26d00a7d2e3bda5760b841fff0779d2ba832771c25da39555d26d88609afe4
+EBUILD notmuch-0.9.ebuild 4663 RMD160 4931aa635d7e4ecba51f45626378b725733e939f SHA1 3aec26ca3740f06275c0370b1461fc4ee73a709c SHA256 1025916f1b6bdbf6a3d9343027c99935ca499c2f7a743918dcb5e0084ae8f822
+MISC ChangeLog 7431 RMD160 54f5f44d4bb981d104d67ef720063d1e7fbb8a8d SHA1 c059e58afa7cb882f043c3b768ad4f3d01e62b36 SHA256 2eaa70e8a3e5b5dc23d8a7cff6784b544f6e90b29d9dd553bdbe5236964099ea
 MISC metadata.xml 897 RMD160 436f9558ab188a98a79dee2b25afba0ce4660f97 SHA1 f31467190638f4b59034c19c855c798b919143f4 SHA256 9408059d62680198c500a7e4727352f9195602f4550fbd25e1962b3b953c74d7
 MISC watch 50 RMD160 df9c217f719a593b336c5befd696b069f6324b5c SHA1 841d4f323cd4229ed287b8ae7078cb6b410226a0 SHA256 9179b7c39d6a0632841b32d25e21f2bd9eb7d2596b4dad08fba6415b7a9b9540
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEAREKAAYFAk6e0K8ACgkQzJrj3cAXR0neGwCguV/0As5zIB0bJtCWg2e2TXiu
-J4AAoKIWhlcxP5ksE+R6g8a+pk0Ma82t
-=zv9d
+iEYEAREKAAYFAk6i4doACgkQzJrj3cAXR0kdpACeKD3YVMyavk4sOo/MygAWv0tS
+dgEAn1clqYTR9kHoTcYkfopLzrGbhCN/
+=He0f
 -----END PGP SIGNATURE-----
