@@ -38,6 +38,8 @@
 * dev-python/virtualenvwrapper-2.10.1         x86 SCHEDULED: <2011-11-21 Mon>
 * media-gfx/actdiag-0.2.0                   amd64 SCHEDULED: <2011-11-21 Mon>
 * media-gfx/actdiag-0.2.0                     x86 SCHEDULED: <2011-11-21 Mon>
+* mail-client/notmuch-0.9                   amd64 SCHEDULED: <2011-11-21 Mon>
+* mail-client/notmuch-0.9                     x86 SCHEDULED: <2011-11-21 Mon>
 * app-misc/hammertime-0.1.3                 amd64 SCHEDULED: <2012-01-10 Tue>
 * app-misc/hammertime-0.1.3                   x86 SCHEDULED: <2012-01-11 Wed>
 * media-gfx/seqdiag-0.3.8                   amd64 SCHEDULED: <2012-01-15 Sun>
