@@ -2,6 +2,11 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*notmuch-0.9 (22 Oct 2011)
+
+  22 Oct 2011; James Rowe <jnrowe@gmail.com> +notmuch-0.9.ebuild:
+  Version bump [482].
+
 *notmuch-0.8 (19 Oct 2011)
 
   19 Oct 2011; James Rowe <jnrowe@gmail.com> +notmuch-0.8.ebuild:
